# embedding-utils

./: .coverage  CHARTER.md  DOCKSIDE-EXAM.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish.yml  test.yml  validate.yml
embedding_utils/: __init__.py  embeddings.py  similarity.py  vectors.py
embedding_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_embeddings.py  test_similarity.py  test_vectors.py
